--- a/kriyasheela/stylesheets/style.css
+++ b/kriyasheela/stylesheets/style.css
@@ -1230,6 +1230,10 @@ width: 32.7rem !important;
 .section_viewuser__header{
 	display: none;
 }
+/* === View User Mobile Version === */
+.user_details_sm{
+  display: none;
+}
 /* === Mobile Responsive === */
 @media screen and (max-width: 600px){
 	.container{
@@ -1296,84 +1300,100 @@ width: 32.7rem !important;
 	}
 	
 	/* === Add more plus icon display in small screen === */
-.bxs-plus-square{
-	display: block !important;
-	font-size: 49px;
-	position: absolute !important;
-	top: -59px;
-	right: -11px;
-}
-div#section_userform {
-    margin-left: -12px;
-	padding-top: 12px;
-}
+	.bxs-plus-square
+	  {
+	      display: block !important;
+	      font-size: 49px;
+	      position: absolute !important;
+	      top: -59px;
+	      right: -11px;
+      }
+    div#section_userform 
+	  {
+         margin-left: -12px;
+	     padding-top: 12px;
+      }
 /* === Legal and Trade Name drop down === */
-.select2-dropdown--below {
-	width: 319px !important;
-}
+    .select2-dropdown--below 
+	 {
+	    width: 319px !important;
+     }
 /* ==== WORKSHEET FORM ==== */
-#worksheet_Form{
-	height: 959px !important;
-}
-#section_userform1>#span{
-	padding-top: 18px;
-	margin: 81px 0 20px 33px !important;
-
-}
-#section_userform1{
-	margin-left: -13px !important;
-}
+    #worksheet_Form
+	{
+	  height: 959px !important;
+    }
+    #section_userform1>#span
+	{
+	  padding-top: 18px;
+	  margin: 81px 0 20px 33px !important;
+    }
+    #section_userform1
+	{
+	  margin-left: -13px !important;
+    }
 /* --- Start and End Time -- */
-.input-group-text{
-   position: relative;
-   top: -38px;
-   right: -279px;
-   height: 38px;
-   z-index: 9999;
-}
-#datetimepicker{
-	width: 318px !important; 
-}
-#datetimepickerend{
-	width: 315px !important;
-}
+   .input-group-text
+   {
+     position: relative;
+     top: -38px;
+     right: -279px;
+     height: 38px;
+     z-index: 9999;
+   }
+   #datetimepicker
+   {
+	 width: 318px !important; 
+   }
+   #datetimepickerend
+   {
+	 width: 315px !important;
+   }
 
 /* ==== CLIENT FORM ==== */
-#clientsubmit{
-	margin-left: 4px !important;
-	width: 100% !important;
-	
-}
-.uploadClientCSV{
-	top : 25px;
-	left: 52px;
-}
-.hr{
-	display: none !important;
-}
-.hr1{
-	display: none !important;
-}
-.or{
-	top: -7px;
-	right: 174px;
-}
-#section_clientform{
-	height: 975px !important;
-	margin-top: 80px !important;
-}
-#section_clientform span{
-	padding-top: 21px !important;
-}
-#clientFormSubmit{
+   #clientsubmit
+   {
+	 margin-left: 4px !important;
+	 width: 100% !important;
+   }
+  .uploadClientCSV
+  {
+	 top : 25px;
+	 left: 52px;
+  }
+  .hr
+   {
+	 display: none !important;
+   }
+  .hr1
+   {
+	 display: none !important;
+   }
+  .or
+   {
+	 top: -7px;
+	 right: 174px;
+   }
+   #section_clientform
+    {
+	 height: 975px !important;
+	 margin-top: 80px !important;
+    }
+   #section_clientform span
+    {
+    padding-top: 21px !important;
+    }
+   #clientFormSubmit
+   {
 	margin-left: 111px !important;
-}
+   }
 
 /* === Client CSV file Submit === */
-.uploadBtn{
-left: -15px !important;
-top: 129px !important;
-}
+  .uploadBtn
+   {
+     left: -15px !important;
+     top: 129px !important;
+   }
 /* === Client CSV selected file === */
 #section_clientform span{
 	margin: -20px 0px 30px -3px;
@@ -1445,7 +1465,11 @@ top: 129px !important;
 }
 /* --- Small Screen --- */
 .user_details_sm{
-	/* background-color: yellow; */
+  display: block !important;
+}
+.user_details_sm{
+	display: bock !important;
+	background-color: #eaeae8e0 !important;
 	min-height: 500px;
 	margin-left: -15px;
 	width: 109%;
@@ -1472,14 +1496,156 @@ top: 129px !important;
 	word-wrap: break-word;
 }
 /* --- View User Table --- */
+.user_details_sm__table{
+	display: block !important;
+}
 .user_details_sm__table>tbody>tr{
 	text-align: left;
 }
 .user_details_sm__table>tbody>tr>td{
-    padding-left: 24px;
+    padding-left: 18px;
     overflow-wrap: break-word;
     padding-top: 16px;
 }
+.user_details_sm__profile_Picture{
+	margin-top: 50px;
+}
+  .user_details_sm__profile_Picture>img
+  {
+    height: 89px;
+    width: 96px;
+    margin-top: 7px;
+    margin-left: 3px;
+    border-radius: 50%;
+  }
+  .user_data{
+    padding: 21px 26px 0px 5px !important;
+	overflow-wrap: break-word;
+	width: 50px;
+  }
+  .user_dots{
+  padding-left: 5px !important;
+  /* color: green; */
+  }
+  /* === VIEW CLIENT === */
+  #clienttable{
+	display: none !important;
+  }
+
+  /* --- View Client Section ---  */
+  #section_clientlist{
+	margin-top: 82px;
+  }
+
+  /* --- View Client Header --- */
+  div#section_clientlist__header 
+  {
+    display: flex;
+    background: #000AFF;
+	color: #fff;
+    height: 41px;
+    align-items: center;
+    justify-content: center;
+	margin-bottom: 20px;
+  }
+  /* --- Show Entries --- */
+
+/* select.form-control.input-sm {
+    width: 30px !important;
+    padding: 5px !important;
+    height: 30px !important;
+} */
+select.form-control.input-sm {
+    width: 35px !important;
+}
+div#clienttable_length {
+    width: 35px;
+    position: relative;
+    left: 1px;
+    top: 4px;
+}
+/* --- Search --- */
+div#clienttable_filter {
+    position: relative !important;
+    top: -41px !important;
+	right: -174px !important;
+    width: 100px;
+}
+input.form-control.input-sm {
+    height: 35px;
+    width: 103px !important;
+}
+  /* --- Pagination -- */
+
+div#clienttable_info {
+	display: none;
+    margin-left: -193px;
+}
+div#clienttable_paginate {
+	display: none;
+    margin-left: -488px;
+}
+/* --- Client Full Details Collapsible --- */
+.client_Details_Collapsible {
+    margin-top: -29px;
+}
+  #client_Details_Collapsible__Collapse{
+	position: relative;
+    top: 26px;
+    left: 173px;
+  }
+  /* .client_Details_Collapsible__Client{
+	position: relative;
+  } */
+  .client_Details_Collapsible__Client__Name{
+	position: relative;
+    background: whitesmoke;
+    padding: 7px 0px 2px 11px;
+  }
+  /* --- Content --- */
+  .client_Details_Collapsible__Content{
+	height: 0;
+	overflow-y: hidden;
+	transition: height 1s ease;
+  }
+  input[type='checkbox']:checked ~ .client_Details_Collapsible__Content{
+	height: auto;
+	overflow: visible;
+	transition: height 1s ease;
+  }
+  /* --- Input is invisible --- */
+  input#client_Details_Collapsible__Collapse
+   {
+    width: 60px;
+    position: absolute;
+    top: 199px;
+    left: 307px;
+    z-index: 1;
+    opacity: 0;
+   }
+
+   /* --- Collapsible Icon -- */
+   i#client_Chevron_Down {
+    /* color: red; */
+    font-size: 34px;
+    position: absolute;
+    right: 17px;
+    top: 206px;
+	transition: all 0.5s ease;
+   }
+    input[type='checkbox']:checked ~ #client_Chevron_Down{
+		transform: rotate(180deg);
+		transition: transform 0.5s ease;
+	}
+	/* --- Client Full Details --- */
+	.client_Details_Collapsible__Content__Table>tbody>tr>td
+	 {
+       padding-right: 12px;
+       font-size: 14px;
+       text-align: left;
+       padding-left: 10px;
+       padding-top: 9PX;
+	 }
 }
 
 
