--- a/kriyasheela/stylesheets/style.css
+++ b/kriyasheela/stylesheets/style.css
@@ -705,6 +705,7 @@ nav .profile-details i {
 	.home-content .sales-boxes .sales-details {
 		width: 560px;
 		margin-top: -82px;
+		position:fixed;
 	}
 }
 @media (max-width: 550px) {
@@ -774,7 +775,7 @@ nav .profile-details i {
 }
 
 .number{
-	margin-left: -87px;
+	margin-left: -88px;
     margin-top: 88px;
     background: white;
     border-radius: 21px;
@@ -815,7 +816,7 @@ span#msg1 {
     margin-top: 18px !important;
     position: absolute;
     top: 194px;
-    left: 249px;
+    left: 279px;
 }
 .mb-2, .my-2 {
     margin-bottom: 2.5rem!important;
@@ -838,14 +839,14 @@ span#msg1 {
 
 .logo{
 	/* display: none; */
-	position: absolute;
+	position: absolute !important;
     top: 20px;
 }
 }
 .navbar-toggler{
-	display: block;
-	position: relative;
-	right: -305px;
+	display: block !important;
+	position: relative !important;
+	right: -305px !important;
 }
 
 
@@ -858,48 +859,54 @@ span#msg1 {
 
 @media (max-width: 1150px){
 .home-content .sales-boxes .box {
-    width: 100%;
-    overflow-x: scroll;
-    margin-bottom: 36px;
+    width: 100% !important;
+    overflow-x: scroll !important;
+    margin-bottom: 36px !important;
     /* background: #ff5500; */
-	margin-left: 1px;
+	margin-left: 1px !important;
 	/* height: 100%; */
 	border: none!important;
     border-radius: 0px!important;
-	font-size: 20px;
+	font-size: 20px !important;
 }
 }
 
 
 @media (max-width: 1150px){
 .home-content .sales-boxes {
-    flex-direction: column;
-    /* padding: 6px 1px 302px -12px; */
+    flex-direction: column !important;
+	position: fixed !important;
 }
 }
 
 @media (max-width: 400px){
 	.home-section {
-		width: 100%;
-		left: 0;
-		background: #0a2558;
+		width: 100% !important;
+		left: 0 !important;
+		background: #0a2558 !important;
 	}
 }
 
 @media (max-width: 400px){
 	.sidebar {
-		width: 0;
-		z-index: 1;
+		width: 0 !important;
+		z-index: 1 !important;
 	}
 }
 
+@media(max-width:400px){
+	div#navbarText {
+		text-align: left !important;
+		margin-left: 137px !important;
+	}
+}
 
 @media(max-width:400px){
 	.dropdown-menu.show{
-		float: none;
-		margin-left: 119px !important;
-    width: 182px;
-	border: none;
+		float: none !important;
+		margin-left: 48px !important ;
+    width: 182px !important;
+	border: none !important;
 	
 
 	}
@@ -907,46 +914,46 @@ span#msg1 {
 
 @media(max-width:400px){
 	#active1{
-		padding-left: 164px;
-        margin-top: -49px;
+		padding-left: 164px !important;
+        margin-top: -49px !important;
 	}
 }
 
 @media (max-width: 400px){
 .home-content .recent-sales.box {
-	margin-top: 265px;
-    height: 123px;
+	margin-top: 279px !important;
+    height: 123px !important;
 }
 }
 
 @media(max-width:400px){
 	.active3{
-	    margin-top: 86px;
+	    margin-top: 86px !important;
 	}
 }
 
 @media (max-width: 400px){
 .title {
-    margin-left: -47px;
+    margin-left: -47px !important;
 }
 }
 
 @media (max-width: 400px){
 .bx-user {
-    margin-top: -239px;
-    margin-left: 169px;
+    margin-top: -239px !important;
+    margin-left: 170px !important;
 }
 }
 
 @media(max-width:400px){
 	#links{
-		margin-top: -231px;
+		margin-top: -236px !important;
 	}
 }
 
 @media (max-width: 400px){
 #Numb {
-    margin-top: -140px;
+    margin-top: -147px !important;
 }
 }
 @media (max-width: 400px){
@@ -963,44 +970,44 @@ span#msg1 {
 /* (A) WRAPPER */
 
   /* (B) HORIZONTAL MENU ITEMS */
-  #hamitems { display: flex; }
+  #hamitems { display: flex !important; }
   #hamitems a {
-	flex-grow: 1;
-	flex-basis: 0;
-	padding: 10px;
-	color: white;
-	text-decoration: none;
-	text-align: center;
+	flex-grow: 1 !important;
+	flex-basis: 0 !important;
+	padding: 10px !important;
+	color: white !important;
+	text-decoration: none !important;
+	text-align: center !important;
   }
   /* #hamitems a:hover { background: #af0d0d; } */
   
   /* (C) HIDE HAMBURGER */
-  #hamnav label, #hamburger { display: none; }
+  #hamnav label, #hamburger { display: none !important; }
 
 
   /* [ON SMALL SCREENS] */
 @media screen and (max-width: 768px){
 	/* (A) BREAK INTO VERTICAL MENU */
 	#hamitems a {
-	  box-sizing: border-box;
-	  display: block;
-	  width: 100%;
-	  border-top: 1px solid #333;
+	  box-sizing: border-box !important;
+	  display: block !important;
+	  width: 100% !important;
+	  border-top: 1px solid #333 !important;
 	}
    
 	/* (B) SHOW HAMBURGER ICON */
 	#hamnav label { 
-	  display: inline-block; 
-	  color: rgb(6, 0, 0);
+	  display: inline-block !important; 
+	  color: rgb(6, 0, 0) ;
 	  /* background: #a02620; */
-	  font-style: normal;
-	  font-size: 2.4rem;
-	  padding-right: 25px;
+	  font-style: normal !important;
+	  font-size: 2.4rem !important;
+	  padding-right: 25px !important;
 	}
   
 	/* (C) TOGGLE SHOW/HIDE MENU */
-	#hamitems { display: none; }
-	#hamnav input:checked ~ #hamitems { display: block; }
+	#hamitems { display: none !important; }
+	#hamnav input:checked ~ #hamitems { display: block !important; }
   }
 
   button:focus {
@@ -1015,28 +1022,28 @@ span#msg1 {
 
 @media(max-width:400px){
 	h2.text-center.mb-2 {
-		padding-right: 45px;
+		padding-right: 45px !important;
 	}
 }
 
 @media(max-width:500px){
 span.font-weight-bold.display-6 {
   
-    padding: 96px 1px 0px 238px;
+    padding: 96px 0px 0px 259px !important;
   
-    margin-right: -179px;
+    margin-right: -158px !important;
 }
 }
 
 @media(max-width:500px){
 
 	.text-center.my-5 {
-		margin: 0px 196px 0px 0px;
+		margin: 0px 196px 0px 0px !important;
 	}
 }
 @media(max-width:500px){
 	span.select2-dropdown.select2-dropdown--below {
-		width: 327.4px !important;
+		width: 321.4px !important;
 	}
 }
 
@@ -1080,6 +1087,14 @@ span.font-weight-bold.display-6 {
 	}
 }
 
+@media(max-width:500px){
+	span#msg1 {
+		margin-top: 58px !important;
+		position: absolute;
+		top: 194px;
+		left: 12px;
+	}
+}
 
 @media(max-width:400px){
 	.col-sm-8 {
@@ -1096,7 +1111,7 @@ span.font-weight-bold.display-6 {
 }
 
 
-/* Responsive code for sign page */
+/* Responsive code for sign In page */
 
 
 @media(max-width:500px){
@@ -1109,14 +1124,14 @@ span.font-weight-bold.display-6 {
 
 @media(max-width:500px){
 	input.form-control {
-		margin-top: -26px;
-		margin-left: 27px;
+		margin-top: -26px !important;
+		margin-left: 27px !important;
 	}
 }
 
 @media(max-width:500px){
 	button.btn.btn-primary.btn-lg {
-		margin-left: 66px;
+		margin-left: 66px !important;
 		margin-top: 14px !important;
 	}
 	}
