--- a/kriyasheela/stylesheets/style.css
+++ b/kriyasheela/stylesheets/style.css
@@ -363,7 +363,7 @@ select.classic:focus {
 	font-size: 14px;
 	font-weight: 400;
 	white-space: nowrap;
-	margin-left: -9px;
+	margin-left: 1px;
 }
 .sidebar .nav-links .log_out {
 	position: absolute;
@@ -780,7 +780,7 @@ nav .profile-details i {
     background: white;
     border-radius: 21px;
     box-sizing: border-box;
-    padding: 9px 14px 9px 11px;
+    padding: 9px 14px 9px 14px;
     color: black;
 }
 
@@ -852,7 +852,7 @@ span#msg1 {
 
 @media (max-width: 1150px){
 .home-content .sales-boxes .top-sales {
-    margin: 0;
+	margin: -24px 0px 0px 0px;
     /* background: blue; */
 }
 }
